--- a/R0_tail/after beta & i/0.1. Mold 1.5..md
+++ b/R0_tail/after beta & i/0.1. Mold 1.5..md
@@ -1,3 +1,5 @@
+***
+
 Я медленно выходил из сна. Темная комната. Распахнутое окно. Колышущиеся на ветру занавески. Я заснул, сидя за столом перед ноутом.
 
 Подвигал мышкой, оживляя экран, окно браузера показало форум "Парахуманс онлайн", тема: "Активность Барыг в Броктон-Бей".
@@ -86,7 +88,7 @@ _\- Оператор говорит: успокойтесь, дышите глу
 
 "Просто добавим это в план", — сказал себе я.
 
-Достав из лотка Желтую Слизь, активировал её Силой, модифицировал в соответствии с планом. Спустя два минуты капли синего вещества вздулись на поверхности этого модельного организма. Были стёрты пальцем и отправлены на язык. Вещество было названо _Спокухой_.
+Достав из лотка Желтую Слизь, активировал её Силой, модифицировал в соответствии с планом. Спустя две минуты капли синего вещества вздулись на поверхности этого модельного организма. Были стёрты пальцем и отправлены на язык. Вещество было названо _Спокухой_.
 
 Пульс стал ровным, на меня снизошло умиротворение. Попробовав рассуждать рационально, я пришел к следующим мыслям.
 
