--- a/R0_tail/inf2/Стая.md
+++ b/R0_tail/inf2/Стая.md
@@ -8,16 +8,20 @@
 2. Чудеса при касании подушечками пальцев кожи (целитель, умертвитель).
 3. Эпизоды. Шабнак.
 
-[[Рыжий]]
+[[Рыжий]][[Бром]] браслеты белый, серый и синий,
 1. Перевертыш переходит (или переводит) в Форму которая просачиваеться в Лес и при выходе из Формы вытекае в зону ДОМ .
 2. Аура\запах с радиусом 2м. Зона ДОМ.
 3. Гипноз. Вводит в транс и "заражает" дружбой. Эффект накладывается в зоне ДОМ и сохраняется когда жертва выходит из радиуса. Длится 12 часов.
 4. Умертвитель. Эпизодами и умышленно.
 
+
 [[Прядь]]
 1. Перевертыш переходит (или переводит) в Форму которая просачиваеться в Лес и при выходе из Формы вытекае в зону ДОМ .
 2. Аура\запах с радиусом 2м. Зона ДОМ.
 3. Перевертыш переходит в форму для коммуницирования с Агентами в зоне ДОМ.
+
+черный панк-гранж стиль, бомбы на ногах, шаровары заканчивающиеся на средине колена резинкой, футболка до средины бедра с принтом "hail satan and trust no one", джинсовая куртка в дырках и потёртостях. Она подстриглась под мальчиковый стиль.забитый татухами рукав на левой руке
+
 
 [[Бледный]] хорошего человека должно быть много
 1. Перевертыш переходит (или переводит) в Форму которая просачиваеться в Лес и при выходе из Формы вытекае в зону ДОМ.
