--- a/R0_tail/структура 1.0.md
+++ b/R0_tail/структура 1.0.md
@@ -1,5 +1,51 @@
-0.4. Молд +
-0.5. Молд Омут Тритон Сон Холмы Кристалы Сеть через Базилиск
+0.4. Молд
+15.9.2010 ночь
+
+панацея бил конфликт
+дорога домой
+хата рагу джингуа туса про мей про деньги
+резня
+рыжий
+
+0.5. 
+выращивание наркоты, просмотр новостей, лазание в сети.
+переписка на форуме
+атаки чистоты на апп
+новости о посадке канарейки
+
+15.10.2010
+рубилово бабла на оптовых продажах
+снижение цены урон бизнесу
+запас денег обращение в скп адвокатом
+не им похуй они хотят чтобы ты сдался
+есть решение изменить внешность Панацеей
+сбор крови для работы панацеей
+переписка по сети
+сбор денег
+панацея мороз в отказ я не буду помагать ибо ты плохой
+я не могу вечно жить в сраном бункере
+мне нужна помощь
+найдём другого
+и сколько мы будем искать? 
+Давайте спланируем как мы захватим её как заставим? 
+Рыжим. она будет лучшей подругой, но с её тараканами нужно будет серьёзно поработать, можно нанять кого нибуть с контролем разума
+заставлять когото с помощью контроля разума применять силу да и толку она же стуканёт на тебя
+вальнуть её потом
+э не не не валить кейпов нельзя
+чёйта вдруг ну они же свои это стандартные правила етикета
+это же как насрать на стол
+анманер полный с табой после такого приличные паралюди дел иметь не захотят
+может обычного пластического херурга закажешь?
+или смотри сядешь с испытательным сроком договоритесь что ты им помогаешь
+
+15.11.2010
+месть
+врыв неформалов
+
+
+
+
+Молд Омут Тритон Сон Холмы Кристалы Сеть через Базилиск
 Омут палит только Прядь, Рыжего, Мака.[[структура]]
 Громят на Барыг. Приходят стражи пакуют Толкача и Скрип.
 С помощью Грибника вытесняют всю наркоторговлю. на територии омута грибы
@@ -23,6 +69,23 @@
 Сплетницу контрят Маком она входит под егиду Омута чтобы быть с Маком
 Клара покидает омут и присоеденяется к Нефомалам
 заставляют сотрудничать Грибником, Маком, Тейлор, Прядью.
+
+
+
+
+ Январь 2011
+   Триггер Тейлор в первый день учебы после зимних каникул. После этого неделю она провела у психиатров (об этом говорит сама Тейлор в 3.01)
+   И месяц не ходила в школу (вот это со слов Шарлотты в 11.05), хотя и вернулась туда в январе (снова 3.01)
+ 24.02.2011
+   Симург атакует Канберру - столицу Австралии. Сын не появился, бой выигран в основном усилиями Эйдолона и Легенды. Цель неизвестна, упоминаются файлы "Polisher Treatise", "Лорд Уолстон" и "Королевская Рать". Город был помещён в карантин, для чего даже построили купол (интерлюдия Святого в 26 арке).
+   (Даты, места и последствия атак Губителей, от Канберры до Лос-Анджелеса 17.05.2013 перечислены в 25.06, от лица Тейлор, там же приведены названия упомянутых выше файлов).
+24-ое февраля 2011 // Симург
+
+
+
+
+
+
 
 Грибник 0 -
 |__Клара 0 Мак Рыжий Прядь Панацея -
@@ -67,3 +130,22 @@
 
 перемещаются
 1995 15 лет [[бегемот]]
+
+
+
+
+
+  Пост - эффекты битвы с Симург
+  
+   Уайлдбоу:
+   После битвы с Симург, можно вытащить карту из списка, для каждого игрока. Сделайте 2/3 карт пустыми, но добавьте несколько карт с эффектами. Убедитесь, что, по крайней мере один из игроков что-то да получит.
+  
+   Дурак (The Fool) -- После события с Симург, маленькие детали не сходятся, для одного из игроков. У него есть член семьи, который ранее не существовал, его квартира в другом месте, и люди, которые должны его знать, не узнают его. Его воспоминания были переписаны (или, возможно, были переписывания воспоминания всех вокруг), и все это достигает кульминации, когда он узнает что-то ужасное про себя, или ужасные выдуманные детали.
+  
+   Маг (The Magus) -- игрок обнаруживает, что числа продолжают появляться вокруг него. Позднее, числа появляются в паре с буквами (то есть, они отправляются к ячейкам для сумок, номер на ячейке X-29). Случайные звуки склонны воспроизводить то же самое -- статика в телевизоре, потрескивание в радио, дождь, бьющий по подоконнику. Если он обращается к другим за помощью, то они видят другие числа и буквы. Со временем, все превращается в полное слово. Cute (милый) -- 29. Cute -- 29. Затем, все вместе, это Execute (казнить) -- 29. Если игрок убивает кого-то, то все превращается в Execute -- 28. Только он начинает думать, что все закончено, загадка решена, к худу или к добру, как начинает появляться обратный отсчет, инопланетные часы (alien clocks), которые явно отсчитывают время до конца.
+  
+   Верховная Жрица (The High Priestess) -- игроку снится инопланетный ландшафт, c одним преобладающим элементом или темой. Он не может понять смысла сообщений, но ясно, что поблизости есть еще другие и они общаются друг с другом. Возможно темные, насекомоподобные фигуры в кристаллических пещерах, общающиеся при помощи феромонов. События вскоре подстраиваются так, что он входит в контакт с вышеупомянутой преобладающей темой. Грабит / останавливает ограбление в ювелирном магазине, и наталкивается на настоящие бриллианты, которые его просят доставить как свидетельство или отвезти поставщику. Персонаж замечает, что пока он владеет бриллиантами, его суперсила значительно сильнее. Когда бриллиантов нет, суперсила слабее. Переносимся на месяц вперед, и обнаруживаем, что персонаж пихает осколки стекла под кожу, чтобы починить силу.
+  
+   Императрица (The Empress) -- с течением времени, растет сила и происходит отключение, в стиле Суки, от социальных умений / понимания. Лица становятся нераспознаваемыми, и простейшие социальные ситуации становятся загадкой. Находясь в одиночестве посреди толпы, индивидуум сходит с ума.
+  
+   Император (The Emperor) -- сон становится тревожным, затем полностью бесполезным -- вне зависимости от того, какое количество времени вы проводите с головой на подушке, это не приносит отдыха, даже если вы тратите часы, с закрытыми глазами, в сновидениях. Но когда все уже кажется потерянным, и дело доходит практически до галлюцинаций, появляется оказия, и персонаж находит, что насилие обеспечивает отдых и восстановление. Чем более он жесток и груб, тем более освеженным себя чувствует. До тех пор, пока в конце одной из битв, персонаж неожиданно обнаруживает, что очень, очень устал и практически галлюцинирует снова, и человек, которого он искалечил, вовсе не тот, за кого он его принимал.
