--- a/R0_tail/inf/персонажи.md
+++ b/R0_tail/inf/персонажи.md
@@ -1,12 +1,18 @@
+Рагу и
+Джингуа(из банды лунга коллектор) Джингу работал коллектором у АПП и потрахивал Мей.
+ соседи
+Мики работодатель
+Мей собирающая оплату с жителей хостела
+
+
 Крассная Перчатка.
 Лаура Комсток.
 Клайд.
-Прядь\Крыса. излом умник
+Прядь. излом умник
 Мак\Красный. Козырь
-Бледный\Слепой. излом, умник
-Способен ощущать скрытые тайны предметов.
-Мертвец. 
-Рыжий. 
+Бледный\Слепой. излом, умник. Способен ощущать скрытые тайны предметов.
+Мертвец.
+Рыжий. Бром
 Клара\Самозванка.
 
  Лес — цель и мечта каждого [Прыгуна]что-то вроде утерянного рая. В Холмах, вернее под Холмами, можно, задобрив местных богов, полностью преобразиться, необратимо и непредсказуемо изменить свою природу. Поэтому в Холмы обитатели Дома заглядывают только в крайних случаях. «На ту сторону» ходят Ходоки и Прыгуны — одни попадают туда по своей воле, другие — нечаянно и не властны управлять событиями. Одни обретают там приятный или удобный облик, другие — истинный свой облик, далеко не всегда приятный и еще менее удобный, который обычно различают лишь местные визионеры. «На той стороне» можно провести несколько лет жизни, тогда как в самом Доме для стороннего наблюдателя проходит несколько минут. А можно — застрять там надолго, пока твое тело будет валяться на койке в [Могильнике]. И это отнюдь не метафизические путешествия. [Слепой]ходит «на ту сторону» под личиной Оборотня, и его при визите к воспитателю Ральфу рвет полупереваренными мышами, на которых он охотился.
@@ -15,14 +21,8 @@ Melanie Fitts трещина
 _________________________
 
 гг Уорен Билл Морган Ро Грибник
-______________________________________________ 
-ирландский паб 
- Бармен мужчина лет сорока, с шикарной бородой. На нем рубашка с закатаными рукавами в крассно черную клетку. Он вызывает у меня асоциации с дровосеком. Он приветствует меня первый:
 
-- День добрый. Чего изволите? - на правом кармане рубашки у него золотисный бейдж с надписью Дениел.
-______________________________________________ 
-
-
+______________________________________________
 
 [[Клайд]]двух метровый очкарик, черная кожа, дреды, синие джинсы, черная футболка, джинсовый желет, на руке браслеты оранжевый, красный, синий. Он зовет меня к себе махнув рукой и развернувшись идет за склад на право. Я следую за ним. Его желетка сзади имеет нашивку в виде скелета вороны.
 
@@ -34,10 +34,33 @@ ______________________________________________
 
 Один из парней щупает малявку с длинными волосами. На его запястьи я замечаю браслеты белый, серый и синий. Стрелок.
 
-Черт. Здесь десять человек. Одна дверь, выход с крыши. Слева четыре раскладушки с матрасами, на одной лежит целующаяяся парочка, девушка в майке и шортах. Черные волосы забитый татухами рукав нв левой руке. Парень снизу в белой грязной футболке и мотоциклетных штанах. Вижу ящики в пивом и водкой. Две раскладушки выступают в роли гардераба, на них скинуты сумки, пакеты и куртки. У последней раскладушки на полу сидят трое парней, двое играют в шахматы. Установленна тент палатка трёх метров в высоту и радиусом около пяти. Справа три парня возрастом около 30 лет и две девочки школьного возраста, губы в одинаковой бордовой помаде, черные брови, ресницы, наведенные стрелки. У первой каштановые волосы собраны в конский хвост, у второй короткая стрижка. Обе одеты джинсу с нашивками популярных рок групп. Один из парней щупает малявку с длинными волосами. На его запястьи я замечаю браслеты белый, серый и синий. Другие двое парней катаются по крыше, каждый пытается взять апонента на на болевой.
+______________________________________________ 
+
+[[Дэниэл]] бармен самерс рок. Бармен — мужчина лет сорока, с шикарной бородой. На нем рубашка с закатанными рукавами в красно-черную клетку.
+ирландский паб 
+ Бармен мужчина лет сорока, с шикарной бородой. На нем рубашка с закатаными рукавами в крассно черную клетку. Он вызывает у меня асоциации с дровосеком. Он приветствует меня первый:
+
+- День добрый. Чего изволите? - на правом кармане рубашки у него золотисный бейдж с надписью Дениел.
+
+самерс рок охранник там мужчина в берцах, камуфляжных штанах и черной футболке целится в меня из "Беретты".
+
+______________________________________________
+
+прядь
+девушка в майке и шортах. Черные волосы забитый татухами рукав на левой руке. Парень снизу в белой грязной футболке и мотоциклетных штанах.
+черный панк-гранж стиль  бомбы на ногах, шаровары заканчивающиеся на средине колена резинкой, футболка до средины бедра с принтом "hail satan and trust no one", джинсовая куртка в дырках и потёртостях. Она подстриглась под мальчиковый стиль.
+Уна гражданское имя.
+Урд кейповское имя.
+Она протягивает мне визитку с номерами телефонов, почтовым адресом и адресом пользователя в месенджере Блюм под системой Saint.Dragon.
+
+клара На ней джинсовая юбка до колен, черная рубашка, кроссовки. Круглые серьги-кольца. Черные прямые волосы. Нет макияжа. Нет дорожек от слёз на щеках.
+
+
+Черт. Здесь десять человек. Одна дверь, выход с крыши. Слева четыре раскладушки с матрасами, на одной лежит целующаяяся парочка,
+Вижу ящики в пивом и водкой. Две раскладушки выступают в роли гардераба, на них скинуты сумки, пакеты и куртки. У последней раскладушки на полу сидят трое парней, двое играют в шахматы. Установленна тент палатка трёх метров в высоту и радиусом около пяти. Справа три парня возрастом около 30 лет и две девочки школьного возраста, губы в одинаковой бордовой помаде, черные брови, ресницы, наведенные стрелки. У первой каштановые волосы собраны в конский хвост, у второй короткая стрижка. Обе одеты джинсу с нашивками популярных рок групп. Один из парней щупает малявку с длинными волосами. На его запястьи я замечаю браслеты белый, серый и синий. Другие двое парней катаются по крыше, каждый пытается взять апонента на на болевой.
 
 [[Бром]] барыга волына с малявками
 
-[[Дэниэл]] бармен самерс рок
 
-______________________________________________
+_____________________________СКП
+офицер Филипе Снелоа
