--- a/R0_tail/inf/Блокнот.md
+++ b/R0_tail/inf/Блокнот.md
@@ -6,3 +6,23 @@
 
 1. Панацея. Память. Здоровье.
 4. Деньги. Куда пропала заначка? Как срубить еще?
+
+
+
+
+0. Мои модельные организмы, действуют в соответствии с параметрами задаными Узором, пока организм находится под влиянием моего Узора и в соответствии с моей волей. Разряженный организм, продолжает функционировать по своему усмотрению, а через сутки останавливается и начинает умирать от голода. 
+1. Дрожжи это грибы утратившие своё мицелиарное строение в связи с благоприятной питательной средой.
+2. Мои организмы могут спариватся с незаряженными-естественными представителями своих видов, для рекомбинации ДНК и передачи своих генов. Таким образом создаются организмы не подвластные влиянию моей силы, но с важными генами которые были созданы моим Узором. Получившиеся организмы продолжают функционировать самостоятельно и без моего участия.
+3. Для производства дрожжей синтезирующих подобие морфина, без моего участия, требуется:
+а) Дрожжерастильный аппарат.
+б) Самогонный апарат.
+в) Хлебные дрожжи.
+г) Питательная среда. Сахар. 
+д) Морфин. Опиумный мак. Мои дрожжи синтезирующие интересующее нас вещество.
+е) Апарат для сушки и сбора дрожжей.
+4. Задачи производственного експериммента №1:
+а) Вырастить хлебные дрожжи до ста килограмм. На питательной среде с сахаром, маком и морфием.
+б) Узором создать дрожжи синтезирующие опиум или морфин.
+в) Запустить спаривание узорных-дрожжей с вырощенными из хлебных. Получаем дрожжи 2.0.
+г) Готовим питательную среду в самогонном апарате, добавляем дрожжи 2.0.
+д) Дрожжи 2.0. поглощают сахар, а срут наркотиком. 
