--- a/R0_tail/inf/персонажи.md
+++ b/R0_tail/inf/персонажи.md
@@ -46,20 +46,18 @@ ______________________________________________
 
 ______________________________________________
 
-прядь
+Прядь\Мона
 девушка в майке и шортах. Черные волосы забитый татухами рукав на левой руке. Парень снизу в белой грязной футболке и мотоциклетных штанах.
 черный панк-гранж стиль  бомбы на ногах, шаровары заканчивающиеся на средине колена резинкой, футболка до средины бедра с принтом "hail satan and trust no one", джинсовая куртка в дырках и потёртостях. Она подстриглась под мальчиковый стиль.
-Уна гражданское имя.
-Урд кейповское имя.
 Она протягивает мне визитку с номерами телефонов, почтовым адресом и адресом пользователя в месенджере Блюм под системой Saint.Dragon.
 
-клара На ней джинсовая юбка до колен, черная рубашка, кроссовки. Круглые серьги-кольца. Черные прямые волосы. Нет макияжа. Нет дорожек от слёз на щеках.
-
+Клер На ней джинсовая юбка до колен, черная рубашка, кроссовки. Круглые серьги-кольца. Черные прямые волосы. Нет макияжа. Нет дорожек от слёз на щеках.
 
 Черт. Здесь десять человек. Одна дверь, выход с крыши. Слева четыре раскладушки с матрасами, на одной лежит целующаяяся парочка,
 Вижу ящики в пивом и водкой. Две раскладушки выступают в роли гардераба, на них скинуты сумки, пакеты и куртки. У последней раскладушки на полу сидят трое парней, двое играют в шахматы. Установленна тент палатка трёх метров в высоту и радиусом около пяти. Справа три парня возрастом около 30 лет и две девочки школьного возраста, губы в одинаковой бордовой помаде, черные брови, ресницы, наведенные стрелки. У первой каштановые волосы собраны в конский хвост, у второй короткая стрижка. Обе одеты джинсу с нашивками популярных рок групп. Один из парней щупает малявку с длинными волосами. На его запястьи я замечаю браслеты белый, серый и синий. Другие двое парней катаются по крыше, каждый пытается взять апонента на на болевой.
 
-[[Бром]] барыга волына с малявками
+
+[[Рыжий]][[Бром]] браслеты белый, серый и синий, барыга волына с малявками
 
 
 _____________________________СКП
