--- a/R0_tail/inf2/Стая.md
+++ b/R0_tail/inf2/Стая.md
@@ -15,7 +15,7 @@
 4. Умертвитель. Эпизодами и умышленно.
 
 
-[[Прядь]]
+[[Прядь]][[Мона]]
 1. Перевертыш переходит (или переводит) в Форму которая просачиваеться в Лес и при выходе из Формы вытекае в зону ДОМ .
 2. Аура\запах с радиусом 2м. Зона ДОМ.
 3. Перевертыш переходит в форму для коммуницирования с Агентами в зоне ДОМ.
@@ -28,7 +28,7 @@
 2. Аура\запах с радиусом 2м. Зона ДОМ. Аура растёт когда он не выходит за её пределы. Бледный видит\чует, всё во всех зонах ДОМ одновременно.
 3. Одновременное восприятие инфы из разделённых зон Дом и Лес. (вероятно множественные сенсорные проекции)
 
-[[Мертвец]]
+[[Мертвец]][[Тим]]
 1. Перевертыш постоянно в Пограничной Форме между Лесом и зоной ДОМ.
 2. Аура\запах с радиусом 2м. Зона ДОМ.
 3. При умирании, тело переходит в Форму перетекая в Лес.
