--- a/R0_tail/структура 1.0.md
+++ b/R0_tail/структура 1.0.md
@@ -1,112 +1,87 @@
-0.4. Молд
-15.9.2010 ночь
+0.4. Молд часть 2
 
-панацея бил конфликт
-дорога домой
-хата рагу джингуа туса про мей про деньги
-резня
-рыжий
+адвокат омут
+джин
+алкобулочки
+батарея
+Тритон
+Тейлор Софи
 
-0.5. 
-выращивание наркоты, просмотр новостей, лазание в сети.
-переписка на форуме
-атаки чистоты на апп
-новости о посадке канарейки
+Омут палит только Прядь, Рыжего, Бледного
 
-15.10.2010
-рубилово бабла на оптовых продажах
-снижение цены урон бизнесу
-запас денег обращение в скп адвокатом
-не им похуй они хотят чтобы ты сдался
-есть решение изменить внешность Панацеей
-сбор крови для работы панацеей
-переписка по сети
-сбор денег
-панацея мороз в отказ я не буду помагать ибо ты плохой
-я не могу вечно жить в сраном бункере
-мне нужна помощь
-найдём другого
-и сколько мы будем искать? 
-Давайте спланируем как мы захватим её как заставим? 
-Рыжим. она будет лучшей подругой, но с её тараканами нужно будет серьёзно поработать, можно нанять кого нибуть с контролем разума
-заставлять когото с помощью контроля разума применять силу да и толку она же стуканёт на тебя
-вальнуть её потом
-э не не не валить кейпов нельзя
-чёйта вдруг ну они же свои это стандартные правила етикета
-это же как насрать на стол
-анманер полный с табой после такого приличные паралюди дел иметь не захотят
-может обычного пластического херурга закажешь?
-или смотри сядешь с испытательным сроком договоритесь что ты им помогаешь
 
-15.11.2010
-месть
-врыв неформалов
+0.5. молд
 
 
 
-
-Молд Омут Тритон Сон Холмы Кристалы Сеть через Базилиск
-Омут палит только Прядь, Рыжего, Мака.[[структура]]
-Громят на Барыг. Приходят стражи пакуют Толкача и Скрип.
-С помощью Грибника вытесняют всю наркоторговлю. на територии омута грибы
-
-они террористы в росси на них выдан приказ на убийство.
-они напали на военную лабораторию исследующую кейпов, похитили и убили одного из работавших там био-тинкеров, а ходе этого теракта погибли работавшие там солдаты и инженеры.
-
-И теперь эта сволочь здесь в Броктон-Бей, занимаются лечением нарко и алко зависимости. При чем работают с детьми. И косят под благотворительную организацию.
-
-Тейлор Софи Емми 4слава Леви в другом городе
-фарм контора предлагает помощь дрожжи алкоголь сахар никотин
-Империя 99 АПП востаёт пакуют Бакуду и Лунга Отдают СКП
-Выверт побеждает с поддержкой Омута Неформалов Скитальцев Цырк
-Выверта громят. Томас Кальвер дир СКП на его месте. Спаситель Броктон бей.
-
-Рыжий и Грибник используют Эмми для создания Клары для Македонского.
-Она может создать тело но как создать душу клары?
-
-
-
-Сплетницу контрят Маком она входит под егиду Омута чтобы быть с Маком
-Клара покидает омут и присоеденяется к Нефомалам
-заставляют сотрудничать Грибником, Маком, Тейлор, Прядью.
-
-
-
-
- Январь 2011
-   Триггер Тейлор в первый день учебы после зимних каникул. После этого неделю она провела у психиатров (об этом говорит сама Тейлор в 3.01)
-   И месяц не ходила в школу (вот это со слов Шарлотты в 11.05), хотя и вернулась туда в январе (снова 3.01)
- 24.02.2011
-   Симург атакует Канберру - столицу Австралии. Сын не появился, бой выигран в основном усилиями Эйдолона и Легенды. Цель неизвестна, упоминаются файлы "Polisher Treatise", "Лорд Уолстон" и "Королевская Рать". Город был помещён в карантин, для чего даже построили купол (интерлюдия Святого в 26 арке).
-   (Даты, места и последствия атак Губителей, от Канберры до Лос-Анджелеса 17.05.2013 перечислены в 25.06, от лица Тейлор, там же приведены названия упомянутых выше файлов).
-24-ое февраля 2011 // Симург
-
-
-
-
-
-
+омут ступени тейлор
 
 Грибник 0 -
 |__Клара 0 Мак Рыжий Прядь Панацея -
-|	|__Красный 2 +
-|	|	|__Крыса 0.1. +
-|	|	|__Прядь 0 +
-|	|	|__Крыса 1 +
-|	|	|	|__Летун 0 +
-|	|	|	|__Летун 1 +
-|	|	|		|__Золотое Утро 0 +
-|	|	|__Крыса 2 +
-|	|	|	|__Летун 3 +
-|	|	|	|__Летун 4 +
-|	|	|	|__Крыса 0 +
-|	|	|__Прядь 1 +
-|	|__Красный 3 +
-|	|	|__Выпускной 0+ 1+ + сказки +
-|	|	|__Выпускной 2 - + под холмами - ральф 0 -
-|	|__Красный 4 +
+|  |__Красный 2 +
+|  |  |__Крыса 0.1. +
+|  |  |__Прядь 0 +
+|  |  |__Крыса 1 +
+|  |  |  |__Летун 0 +
+|  |  |  |__Летун 1 +
+|  |  |     |__Золотое Утро 0 +
+|  |  |__Крыса 2 +
+|  |  |  |__Летун 3 +
+|  |  |  |__Летун 4 +
+|  |  |  |__Крыса 0 +
+|  |  |__Прядь 1 +
+|  |__Красный 3 +
+|  |  |__Выпускной 0+ 1+ + сказки +
+|  |  |__Выпускной 2 - + под холмами - ральф 0 -
+|  |__Красный 4 +
 |__Клара 1
 Грибник 2
+
+Выверт побеждает Апп Барыг и Империю с поддержкой Омута Неформалов Скитальцев Цырк
+
+Сплетницу контрят Маком она входит под егиду Омута чтобы быть с Маком заставляют сотрудничать Грибником, Маком, Тейлор, Прядью.
+фарм контора предлагает помощь дрожжи алкоголь сахар никотин
+
+симург в канализационном тонеле встреча с грибником в красном свете ночесветки бег в слезах страх что схватят
+
+24.02.2011 Симург атакует Канберру - столицу Австралии. 
+15.04.2011 скитальцы
+
+0.6. молд
+мак и клара
+
+Выверта громят. Томас Кальвер дир СКП на его месте. Спаситель Броктон бей.
+
+
+движки
+заминированый ошейник
+дракон выщитывает сколько времени можно находится под влиянием симург
+
+ мак и емми 4 славы
+
+
+Рыжий и Грибник используют Эмми для создания Клары для Македонского.
+
+Она может создать тело но как создать душу клары? Бледный.
+
+Молд Омут  Сон Холмы Кристалы Сеть через Базилиск
+
+Клара покидает омут и присоеденяется к Нефомалам
+
+сказки про скаффандр и ИИ
+
+сказка мертвеца про квантовую теорию сознания, мол електро химические еффекты оказывают влияние на квантовую природу пространства и сознание формируется в ефире как побожный еффект електрохимического електромагнитного излучения.
+
+
+0.6.
+Бойня в ББ
+Джек доза прозрение Тритон
+бойня падёт
+лабиринт мантон
+джек сплетница
+райли панацея
+тейлор регент чериш
+
 
 Ноель СКП Помогают сводят с Панацеей
 
