--- a/R0_tail/inf/персонажи.md
+++ b/R0_tail/inf/персонажи.md
@@ -1,3 +1,7 @@
+Крутыш — Технарь 4. В основном оружие и антигравитационные устройства. 
+Призрачный Сталкер — с ней сложнее. Излом 3, подклассы Скрытник 2, Движок 1
+
+
 Рагу и
 Джингуа(из банды лунга коллектор) Джингу работал коллектором у АПП и потрахивал Мей.
  соседи
