--- a/R0_tail/структура 1.0.md
+++ b/R0_tail/структура 1.0.md
@@ -1,51 +1,106 @@
-0.4. Молд часть 3
+0.5. Молд 
 
-ейсид рум
-сходка митинг
+бекенд тейла софи нефоры это мы тебя спасли
+митинг вместе с нефорами, нащемить АПП ибо Лунг не отебётся, а платить дань мы не намерены 	нам не по карману и наши приобщившиеся не вернутся в АПП. 
+
+Упоминание Тейлы и её сил Мона говорит что когда подошла к ней то потеряла над собой контроль.  И Тейла вытолкнула Мону из своего радиуса.
+Омут на встречу с Лунгом. Грибник мак церковь.
+Лунг разёбывает Убежище.
 хорхауз
 
 
-0.5. молд
+Лунг церковь мертвец бледный мак копирование силы лунга мак переживание тригера 
 
+подключение новой волны
+Дракон Оружейник Скорость
+Удар мака
+под щитами НВ подходит к поверженному Лунгу стояк его нейтрализует.
 
-империя вёрс
-барыги бой за доки 
-выбивание апп им на смену придут
-доки центр
+приводят Тейлу. 
+лунг хилится, по рекоммендации отдела аналитики, Дракон одевает тейлу в броне костю и закрывает силовым полем, стояк снимает влияние своей силы.
 
-апп выносятся
+Тейла захватывает луна
+все разбегаються, спустя два часа Луг выростает до и сдувается его уводят 
 
-д.ли спасает лунга от клетки они возвращаются, лунг такой ах вы суки ну вам пизда
+герои охраняют периметр ожидая АПП и демона Ли приходят маски империи мы хотим помочь и вя хуйня.
 
-бой 
+Лунга пакуют и увозят
 
+лиза + омут + софи + неф + браян
 
 цели поставленные вывертом - выбить апп пока оно ослаблено. дать преимущество барыгам, сделать их угрозой.
+апп выносятся выбивание апп им на смену придут . удары по казино и складам АПП с наркотиками
 
+д.ли спасает лунга от клетки они возвращаются, 
+Симург пропала нырнув в тихий океан
+24.02.2011 Симург ныряет в тихий океан
+симург приходит в балахоне без крика
+
+01.03.2011 утиль: Страшила Browbeat 
+феврале-марте Толкач  Страшила, побивший Барыг)
+нарко треш
+
+
+бля вам пизда это стрёмный отвратительный пиздец, пиздуйте нахуй из моего города
+
+
+Грибник вытесняет всю наркоторговлю. на територии омута грибы
+Я дал людям доступ к любым интересующим их веществам, бесплатно.
+Развесил обьявления и разбросал листовки.
+лишило ли это местные опг денежных потоков? а вот нихуя. Некоторые на похуях продолжают вваливать себе кустарную дрянь свареную в антисанитарных условиях, просто потому что так привыкли и доверяют своим продавцам. Другие появившиеся деньги, начали тратить на шлюх, азартные игры, оружие и опять же на наркотики только теперь не для употребления, а для продажи.
+
+сука да идите вы все в хуй.
+
+
+(Казино, Бордели, Наркопритоны)
+Слежка: сплетница мона
+
+Внедрение:
+- Бром, Тим (Барыги)
+- Билл, Мона (АПП)
+- Сплетница, Алек (Империя88)
+
+Диверсия, отвлекающий манёвр:
+- Рыжий, Прядь (империя88)
+- Убер, Лит (Бордель Доки)
+- Сука (Вой, лай, забеги)
+
+Атака:
+- Регент, Мрак, Сплетница, сука (склад-общак АПП)
+- трещена, улитка грегор, ньютер, саламандра, лабиринт 
+(склад-общак империя88 бар)
+- Бледный, Мертвец, Цирк (склад-общак барыг)
+
+демпинг
+
+В нелегальную экономику входят:
+
+перераспределительная деятельность маргинальных преступных групп:
+с применением насилия или покушением на частную собственность (хищения, бандитизм, рэкет);
+преступления против власти или общества (коррупция, контрабанда, фальшивомонетничество);
+незаконная производственная деятельность (наркобизнес, производство поддельной, контрафактной, нелегальной или нелицензионной продукции);
+чёрный рынок.
+Рациональную сторону запрещённых видов деятельности изучает экономика преступления и наказания.
+
+Преступные и террористические организации участвуют в международной экономической инфраструктуре. В результате глобализации возникла международная нелегальная экономическая сеть, в которую входят некоторые исламские банки, офшоры, отмывающие деньги учреждения и сами преступники и террористы.[1]
+
+
+Насколько креативно допускается мыслить вашей группировке и насколько дальновидной она должна быть? 
+Мне приходит в голову стратегия «крупных партнеров» — организовать закупки крупными заказчиками (которые распространители) пусть ниже обычной цены но стабильно. 
+«Народного ополчения» — перекрыт ь поток блага распространителям итп и культивировать у них образ врага. 
+«Отравленных яблок» - мимикрировать под этих ниндзя и распространить сильно паленый товар чтобы посеить недоверие к бесплатному сыру. 
+Выпотрошить парочку их наиболее крупных клиентов под лозунгом «так будет с каждым». 
+А если бы это была я, я бы вообще перестала торговать дурью, переключившись на смежные товары/услуги чтобы идти на нулях и своими агентами запасала бы товар этих ниндзя пока не выдоила бы их бюджет на операцию досуха. Если бы совсем прижали финансы, я бы сливала их товар за полцены в соседний регион через сеть подставных лиц которые действуют от имени этих ниндзя.
+
+0.6. молд
+
+лунг такой ах вы суки ну вам пизда
+бой лун мак
+Симург
 выбить барыг с помощью героев, защитить особняки, набеги на нычки барыг. склады
 конференция: сплетница прядь
 
-
-
-
 Выверт побеждает Апп Барыг и Империю с поддержкой Омута Неформалов Цырк убер лит
-
-
-мак белый открытый в Убежыще
-хор из комнаты мака дисы
-фрактал лесница. Спуск к подвальной двери дисс4 не может справится с ручкой
-споры из организмов в волосах пучки волос спрывают мешочки со спорами
-напуг клиента
-улица хор стихает
-крик симург
-клиент выбегает на дорогу его сбивает машина
-паника мышление трейдера
-детерминизм
-панзрам
-я трясун, решение уже заложено ты просто ждешь совета соответствующего твоему трансактному сценарию ригор мортис. Ждешь возможности для рационализации просто выбери решение заложенное в тебя
-застыть или начать вести себя неадекватно, если повезёт не предсказуемо, именно так я вёл себя сталкиваясь с непреодолимой силой.
-заряжаю узором мозг, искривляя его волнами словно листок бумаги чтобы захватить больше диапазона, рапределившись по всем зонам мозга, но при этом не потерять состояние восприятия в котором я смогу относительно осознано и целесообразно действовать. В прошлый раз я зарядил весь мозг, в это раз широким волнистым листом-слоем Узора, толщиной с зубную нить, я зарядил частички нейронных сетей, во всех областях мозга. Наблюдение за еллектро химией проскакивающей через слои Узора. Квантовая теория сознания. Квантовая решетка.
-
 
 Агент - я хочу вспомнить всё
 
@@ -58,8 +113,14 @@
 
 Ночью Тритон трип
 
-зиз????
 
+
+посвящение в омут
+посвящение в четвёртую ступень твирин степь лес болото пещеры алые зеркальные кристалы
+
+зиз????
+квантовое сознание
+бледный гриб пещера кристалы избавится
 
 перед приходом Зиз. Омут прячется мертвеца оставляют как точку выхода, 
 Прядь Мертвец Полярник у костра
@@ -96,13 +157,16 @@
 
 Выверта громят. Томас Кальвер дир СКП на его месте. Спаситель Броктон бей.
 
-
+измененение предыстории
 <!-- Мак в зиз -->
+не доверие к файлам в инете, опрос дальних радственнико
+надзиратели работают на месте в три смены опрашима двожнов личности масок и гражданские 
 
+сравнение с показаними дальних родственников
 омуту нужна амелия для создания тела для клары если она не согласится планируется применить регенита. клару чтобы помочь с золотым утром.
 опт барыгам и апп
 
-0.6. молд
+0.7. молд
 
 барыги - доки, империя - центр, подполье\омут\трещина - холмы особняки
 
@@ -173,7 +237,7 @@ ____________________________
 вампиры солнечшый свет вызывает галюцинации изза производимого серотонина
 
 
-0.6.
+0.8.
 23.03.2011 Лун рекрутирует Бакуду 
 15.04.2011 скитальцы
 
