--- a/R0_tail/inf/персонажи.md
+++ b/R0_tail/inf/персонажи.md
@@ -73,3 +73,7 @@ _____________________________СКП
 _______________адвокат
 
 Мистер Гари Грант, по приветствовал меня бодрым голосом с ощютимой на слух улыбкой.
+
+
+________________Убежище
+Админы Саймон и Лира
