--- a/R0_tail/структура 1.0.md
+++ b/R0_tail/структура 1.0.md
@@ -1,108 +1,21 @@
 0.5. Молд 
 
-бекенд тейла софи нефоры это мы тебя спасли
-митинг вместе с нефорами, нащемить АПП ибо Лунг не отебётся, а платить дань мы не намерены 	нам не по карману и наши приобщившиеся не вернутся в АПП. 
+
+митинг вместе с нефорами
+лунг мак костёр новая волна ютюб ролик
+как убедить себя что я хороший
+Узор в мозг нет свободы воли
 
 Упоминание Тейлы и её сил Мона говорит что когда подошла к ней то потеряла над собой контроль.  И Тейла вытолкнула Мону из своего радиуса.
-Омут на встречу с Лунгом. Грибник мак церковь.
-Лунг разёбывает Убежище.
-хорхауз
+бекенд тейла софи 
 
-
-Лунг церковь мертвец бледный мак копирование силы лунга мак переживание тригера 
-
-подключение новой волны
-Дракон Оружейник Скорость
-Удар мака
-под щитами НВ подходит к поверженному Лунгу стояк его нейтрализует.
-
-приводят Тейлу. 
-лунг хилится, по рекоммендации отдела аналитики, Дракон одевает тейлу в броне костю и закрывает силовым полем, стояк снимает влияние своей силы.
-
-Тейла захватывает луна
-все разбегаються, спустя два часа Луг выростает до и сдувается его уводят 
-
-герои охраняют периметр ожидая АПП и демона Ли приходят маски империи мы хотим помочь и вя хуйня.
-
-Лунга пакуют и увозят
-
-лиза + омут + софи + неф + браян
-
-цели поставленные вывертом - выбить апп пока оно ослаблено. дать преимущество барыгам, сделать их угрозой.
-апп выносятся выбивание апп им на смену придут . удары по казино и складам АПП с наркотиками
-
-д.ли спасает лунга от клетки они возвращаются, 
-Симург пропала нырнув в тихий океан
-24.02.2011 Симург ныряет в тихий океан
-симург приходит в балахоне без крика
-
-01.03.2011 утиль: Страшила Browbeat 
-феврале-марте Толкач  Страшила, побивший Барыг)
-нарко треш
-
-
-бля вам пизда это стрёмный отвратительный пиздец, пиздуйте нахуй из моего города
-
-
-Грибник вытесняет всю наркоторговлю. на територии омута грибы
-Я дал людям доступ к любым интересующим их веществам, бесплатно.
-Развесил обьявления и разбросал листовки.
-лишило ли это местные опг денежных потоков? а вот нихуя. Некоторые на похуях продолжают вваливать себе кустарную дрянь свареную в антисанитарных условиях, просто потому что так привыкли и доверяют своим продавцам. Другие появившиеся деньги, начали тратить на шлюх, азартные игры, оружие и опять же на наркотики только теперь не для употребления, а для продажи.
-
-сука да идите вы все в хуй.
-
-
-(Казино, Бордели, Наркопритоны)
-Слежка: сплетница мона
-
-Внедрение:
-- Бром, Тим (Барыги)
-- Билл, Мона (АПП)
-- Сплетница, Алек (Империя88)
-
-Диверсия, отвлекающий манёвр:
-- Рыжий, Прядь (империя88)
-- Убер, Лит (Бордель Доки)
-- Сука (Вой, лай, забеги)
-
-Атака:
-- Регент, Мрак, Сплетница, сука (склад-общак АПП)
-- трещена, улитка грегор, ньютер, саламандра, лабиринт 
-(склад-общак империя88 бар)
-- Бледный, Мертвец, Цирк (склад-общак барыг)
-
-демпинг
-
-В нелегальную экономику входят:
-
-перераспределительная деятельность маргинальных преступных групп:
-с применением насилия или покушением на частную собственность (хищения, бандитизм, рэкет);
-преступления против власти или общества (коррупция, контрабанда, фальшивомонетничество);
-незаконная производственная деятельность (наркобизнес, производство поддельной, контрафактной, нелегальной или нелицензионной продукции);
-чёрный рынок.
-Рациональную сторону запрещённых видов деятельности изучает экономика преступления и наказания.
-
-Преступные и террористические организации участвуют в международной экономической инфраструктуре. В результате глобализации возникла международная нелегальная экономическая сеть, в которую входят некоторые исламские банки, офшоры, отмывающие деньги учреждения и сами преступники и террористы.[1]
-
-
-Насколько креативно допускается мыслить вашей группировке и насколько дальновидной она должна быть? 
-Мне приходит в голову стратегия «крупных партнеров» — организовать закупки крупными заказчиками (которые распространители) пусть ниже обычной цены но стабильно. 
-«Народного ополчения» — перекрыт ь поток блага распространителям итп и культивировать у них образ врага. 
-«Отравленных яблок» - мимикрировать под этих ниндзя и распространить сильно паленый товар чтобы посеить недоверие к бесплатному сыру. 
-Выпотрошить парочку их наиболее крупных клиентов под лозунгом «так будет с каждым». 
-А если бы это была я, я бы вообще перестала торговать дурью, переключившись на смежные товары/услуги чтобы идти на нулях и своими агентами запасала бы товар этих ниндзя пока не выдоила бы их бюджет на операцию досуха. Если бы совсем прижали финансы, я бы сливала их товар за полцены в соседний регион через сеть подставных лиц которые действуют от имени этих ниндзя.
-
-0.6. молд
-
-лунг такой ах вы суки ну вам пизда
-бой лун мак
 Симург
+
 выбить барыг с помощью героев, защитить особняки, набеги на нычки барыг. склады
+
 конференция: сплетница прядь
 
 Выверт побеждает Апп Барыг и Империю с поддержкой Омута Неформалов Цырк убер лит
-
-Агент - я хочу вспомнить всё
 
 Тритон Планкин
 первый раз не запомнил трип мутный
@@ -111,21 +24,7 @@
 
 что это мне даст? Ну, я почувствую себя учённым иследователем приносящим себя в жертву во благо человечества.
 
-Ночью Тритон трип
-
-
-
-посвящение в омут
-посвящение в четвёртую ступень твирин степь лес болото пещеры алые зеркальные кристалы
-
-зиз????
-квантовое сознание
-бледный гриб пещера кристалы избавится
-
-перед приходом Зиз. Омут прячется мертвеца оставляют как точку выхода, 
-Прядь Мертвец Полярник у костра
-Бледный и гг у холмов в болотах под холмами в пещеры к крассными кристалам сон на болотах смена формы
-держи флакон тритон узор псай исслед в мозг
+письмо Бледного посвящение в стаю
 
 Грибник 0 -
 <!-- __Клара 0 Мак Рыжий Прядь Панацея - -->
@@ -147,6 +46,18 @@
 |  |__Красный 4 +
 <!-- |__Клара 1 -->
 Грибник 2
+
+посвящение в омут
+посвящение в четвёртую ступень твирин степь лес болото пещеры алые зеркальные кристалы
+
+зиз????
+квантовое сознание
+бледный гриб пещера кристалы избавится
+
+перед приходом Зиз. Омут прячется мертвеца оставляют как точку выхода, 
+Прядь Мертвец Полярник у костра
+Бледный и гг у холмов в болотах под холмами в пещеры к крассными кристалам сон на болотах смена формы
+держи флакон тритон узор псай исслед в мозг
 
 
 симург в канализационном тонеле встреча с грибником в красном свете ночесветки бег в слезах страх что схватят
@@ -205,8 +116,6 @@
 в городе епидемия
  есть угроза распространения, 
 
-боди хоррор скармливание трупов
-На Старте
 
 Кладбище Кораблей, Трамвайное депо, Рынок:
 Культ = Сочник\Цирк, Толкач, Скрип, Прядь, Сплетница, Рыжий, Бледный, Мертвец.
@@ -227,7 +136,7 @@
 Империя88 = Кайзер\Чистота,
 
 Стена\Кордон, Штаб Протектората:
-СКП = Дракон, Оружейник, Мисс Ополчение, Батарея, Асаулт, Скорость, Флешета, КидВин, Стояк, Виста, Эгида, Сталевар, Флешета, Триумф, Ласточких хвост.
+СКП = Дракон, Оружейник, Мисс Ополчение, Батарея, Штурм, Скорость, Флешета, КидВин, Стояк, Виста, Эгида, Сталевар, Флешета, Триумф, Ласточких хвост.
 
 
 ____________________________
@@ -235,6 +144,24 @@ ____________________________
 
 
 вампиры солнечшый свет вызывает галюцинации изза производимого серотонина
+
+боди хоррор скармливание трупов
+На Старте
+
+Бодихоррор = Красная Шапочка, Мак, Страшила\БроуБит, Эгида, Сочник, Кукла, ТриСлавы, Сука, Клара.
+
+Подполье = Мрак+Сталкер, Чертёнок, Алек+Тайла.
+
+Измерение = Рыжий, Бледный, Мертвец, Лабиринт.
+
+Псай = Тритон, Грибник.
+
+Выверт+Дина, 
+Цирк+Сплетница, 
+
+Техно = Скрип, Колесничий, Металолом, Лит, КидВин, 
+
+Толкач, Саламандра, 
 
 
 0.8.
