--- a/R0_tail/фаза два/крассная шапочка.md
+++ b/R0_tail/фаза два/крассная шапочка.md
@@ -21,3 +21,8 @@
 симбиот
 
 слои и уровни и глаза \ перевёртыши \ перекидыши \ пропитка окружающего силой и телепортация \ бледный
+
+
+жертво приношения пришей мне мозги умника
+
+светящаяся белая кожа
