--- a/R0_tail/структура 1.0.md
+++ b/R0_tail/структура 1.0.md
@@ -6,24 +6,6 @@
 как убедить себя что я хороший
 Узор в мозг нет свободы воли
 
-Упоминание Тейлы и её сил Мона говорит что когда подошла к ней то потеряла над собой контроль.  И Тейла вытолкнула Мону из своего радиуса.
-бекенд тейла софи 
-
-Симург
-
-выбить барыг с помощью героев, защитить особняки, набеги на нычки барыг. склады
-
-конференция: сплетница прядь
-
-Выверт побеждает Апп Барыг и Империю с поддержкой Омута Неформалов Цырк убер лит
-
-Тритон Планкин
-первый раз не запомнил трип мутный
-второй раз пустил узор в мозг тонкими нитями
-монитор чтобы выяснить в каких областях мозга больше всего собирается глюкозы.
-
-что это мне даст? Ну, я почувствую себя учённым иследователем приносящим себя в жертву во благо человечества.
-
 письмо Бледного посвящение в стаю
 
 Грибник 0 -
@@ -46,6 +28,40 @@
 |  |__Красный 4 +
 <!-- |__Клара 1 -->
 Грибник 2
+
+Крыса послание от Базилиска
+
+20.2.11 - 1.3.11 She cume. Мак под Холмы.
+
+просыпается в дурочке
+
+раш к маку
+
+я должен узнать что с моной
+ломится к себе, а его там и не ждут
+ломится в скп контакт с куратором а он говорит мы вообще не причём
+а че там мак? мы с ним по базарили он возвращатся не хочет хочет служить в СКП
+дай поговорить
+
+
+Упоминание Тейлы и её сил Мона говорит что когда подошла к ней то потеряла над собой контроль.  И Тейла вытолкнула Мону из своего радиуса.
+бекенд тейла софи 
+
+Симург
+
+выбить барыг с помощью героев, защитить особняки, набеги на нычки барыг. склады
+
+конференция: сплетница прядь
+
+Выверт побеждает Апп Барыг и Империю с поддержкой Омута Неформалов Цырк убер лит
+
+Тритон Планкин
+первый раз не запомнил трип мутный
+второй раз пустил узор в мозг тонкими нитями
+монитор чтобы выяснить в каких областях мозга больше всего собирается глюкозы.
+
+что это мне даст? Ну, я почувствую себя учённым иследователем приносящим себя в жертву во благо человечества.
+
 
 посвящение в омут
 посвящение в четвёртую ступень твирин степь лес болото пещеры алые зеркальные кристалы
