--- a/R0_tail/фаза два/крассная шапочка.md
+++ b/R0_tail/фаза два/крассная шапочка.md
@@ -3,6 +3,11 @@
 старые мозги в детских телах
 
 фор глори
+Тройная слава
+Траурная слава
+Утренняя слава
+Славное Мясо
+edge of glory
 
 аквариум мозгомедуз
 
@@ -21,7 +26,6 @@
 симбиот
 
 слои и уровни и глаза \ перевёртыши \ перекидыши \ пропитка окружающего силой и телепортация \ бледный
-
 
 жертво приношения пришей мне мозги умника
 
