--- a/R0_tail/структура 1.0.md
+++ b/R0_tail/структура 1.0.md
@@ -1,191 +1,288 @@
-0.5. Молд 
+0.5. Молд
 
 
-митинг вместе с нефорами
-лунг мак костёр новая волна ютюб ролик
-как убедить себя что я хороший
-Узор в мозг нет свободы воли
+Вторая Фаза
 
-письмо Бледного посвящение в стаю
+тритон ньютер
+Надзиратели (Watchdog) 
+Отчёт Лары Полсон о событиях в карантинной зоне СКП N8. Версия 0.4.1. Только для ознакомления штатными аналитиками. Актуально на 30.2.2011. Требуется редактирование.
+	
+симург 4.5 метров роста
+20.2.11 симург цепляет спутник ныряет в тихий океан 
+23.2.11 сылы предсказателей в броктон бей начинают сбоить
+24.2.11 тревога атака губителя в броктон бей движки летуны прибывают на бой с симург + триумвират
+25.2.11 
+	0) место положение симург обнаруживают в канализации под городом в даунтауне. ошейники со взрывчаткой на участников ейдолон, дракон, миридин, александрия, легенда. нарвал. Чистота, руна, лазер шоу, леди фотон, щит, 
+	1) движки заняты евакуацией.
+	2) евакуированых изолируют в карантинной зоне в дали от битвы. применяют стояка.
 
-Грибник 0 -
-<!-- __Клара 0 Мак Рыжий Прядь Панацея - -->
-|  |__Красный 2 +
-|  |  |__Крыса 0.1. +
-|  |  |__Прядь 0 +
-|  |  |__Крыса 1 +
-|  |  |  |__Летун 0 +
-|  |  |  |__Летун 1 +
-|  |  |     |__Хранитель времени 0 +
-|  |  |__Крыса 2 +
-|  |  |  |__Летун 3 +
-|  |  |  |__Летун 4 +
-|  |  |  |__Крыса 0 +
-|  |  |__Прядь 1 +
-|  |__Красный 3 +
-|  |  |__Выпускной 0+ 1+ + сказки +
-|  |  |__Выпускной 2 - + под холмами - ральф 0 -
-|  |__Красный 4 +
-<!-- |__Клара 1 -->
-Грибник 2
+		симург в канализационном тонеле встреча с грибником в красном свете ночесветки бег в слезах страх что схватят
+		заминированый ошейник
+		дракон выщитывает сколько времени можно находится под влиянием симург
 
-Крыса послание от Базилиска
+	3) интервью у закрых на карантин людей берут список мыслителей\предсказателей
+		в обследовании участвуют дракон, технарские сканеры, Козёл искупления и т.д.
+		при этом присутствуют бойцы СКП вооруженные стрелковым оружием с экспансивными поражающим потенциалом.
+		не доверие к файлам в инете, опрос дальних радственнико
+		надзиратели работают на месте в три смены опрашима двожнов личности масок и гражданские 
+		сравнение с показаними дальних родственников
+		омуту нужна амелия для создания тела Пряди 
 
-20.2.11 - 1.3.11 She cume. Мак под Холмы.
+	4) Защитники города пытаются выкурить Симург на поверхность.
+	5) Симург сбегает.
 
-просыпается в дурочке
+Доступ ко сигналам сотовых вышек на територии N8 доступен только для сотрудников N8.
 
-раш к маку
+	перекрытие выходов и выездов из города. перекрытие пляжей. введение патрулей
+	вызов остальных масок
+	обнос забором
+	блокпосты от блокпостов в ыселение людей к центру города. 
+	вызов команд масок мыслителей
+	введение комендантский час.	
+	создания "полосы отчуждения", в промежутке между карантинными стенами и жилой областью, а также были введены регулярные патрули.
+		Католики Башни Иммакулата создали новую общину Свидетели Зиона, обьявили свою общину отдельным государством и уже подготовили свою конституцию. 
+		Прикреплённый файл: Конституция Свидетели Зиона.pdf.
+		Коментарий к конституции: 
+			1) За отношения сексуального характера между представителями отличных рас, предусмотрена публичная смертная казнь для всех участников процеса.
+			2) За близость романтического рода, между представителями отличных рас, предусмотрены штрафы и санкции.
+			3) Паралюдей объявляют отдельной расой.
+		К их общине присоеденились такие маски как Ночь, Туман, Отала, Виктор, Мрак, Теневой Сталкер, Толкач и Демон Ли. 
+		На територии происходят стычки между СЗ и Империей88.
+		приложение: протоколы допроса и процедуры Изятия Чистоты\Кайден Андерсон.
 
-я должен узнать что с моной
-ломится к себе, а его там и не ждут
-ломится в скп контакт с куратором а он говорит мы вообще не причём
-а че там мак? мы с ним по базарили он возвращатся не хочет хочет служить в СКП
-дай поговорить
+		Сообщество Истого Сознания Полярник\Матвей
+
+		Стена.
+		ускоренную процедуру проверки проходят все маски СКП.
+		приоритет летающие маски и дижки.		
+		Маски прошедшие ускоренную-процедуру Изятия и допущены к карантинной зоне СКП N8:
+			Слава0, Рыцарь, Барьер, Мегаватт, Брандиш, ЛазерШоу, Леди Фотон, Бризант, Руна, Чистота, Оружейник, Мисс Ополчение, Батарея, Штурм, Скорость, КидВин, Стояк, Виста, Эгида, Триумф,
+
+		Маски прошедшие процедуру допуска к карантинной зоне СКП N8:
+			 Дракон, Флешета, Сталевар, Ласточких хвост, Adamant • Challenger • Dauntless • Dovetail • Sere • Crucible • Chariot • Gallant † • Toggle
+
+		Маски прошедшие процедуру допуска к карантинной зоне СКП N8(1):
+			Пепельная, также Пепельный Феникс (Ash Phoenix), Сатир, Козел Отпущения, 
+
+	медообследования и интервью проверка на опасность. 
+
+	первый цыкл обследованых делится на два типа "на утилизацию" и "годен для второго цикла".
 
 
-Упоминание Тейлы и её сил Мона говорит что когда подошла к ней то потеряла над собой контроль.  И Тейла вытолкнула Мону из своего радиуса.
+	Панацея и слава пропадают
+
+  Фэнтэзи маски:
+   Появляется замысловатый веб-сайт "команда фэнтэзи масок", позволяющий людям собирать команды масок и получать очки, основываясь на внимании СМИ, победах, результатах против других масок, и специальных эффектах, основанных на тех, кто меняет команды или участвует в битвах с Губителями, помимо всего прочего.
+   Настоящая проблема появляется, когда, по-видимому, внезапно, код начинает распространяться по вебсайту. Там есть возможность выбора для людей устанавливать вызовы для масок (если маска подписана на веб-сайт), с оплатой, приносящей маске деньги и индивидуальные очки, если вызов преодолен, но правила насчет того, каким может быть вызов, весьма строги. "Коснуться рукой (маски) чего-либо красного", код, означающий, что нужно пустить кровь, в этом новом эвфемизме. Не требуется большого ума, чтобы понять, что означает "Коснуться рукой (маски) чего-либо черного". Сотни "чего-то красного" и "чего-то черного" начинают всплывать на сайте, создатель вебсайта молчит, и сообщество масок впадает в беспокойство. Вскоре кто-то с причиной для недовольства заметит, что общее количество предлагаемого достигло в сумме достаточно высокой отметки, и решит ринуться вперед и сделать то, что предлагают.
+  Сад Эден (прим. также переводится как Райский Сад / Сад Эдема)
+   Жестокие правонарушители начинают триггерить в (городе)... в действительно, действительно высоких масштабах. Иногда эти силы исчезают, но слово уже распространилось, и теперь люди стекаются в город, разжигая проблемы и стремясь понять правила, по которым получают, удерживают и теряют суперсилы. Тем временем, герои пытаются сохранять общественный порядок, до той степени, до которой его можно сохранять, и когда они могут уделить время, то исследуют данный феномен.
+
+   Теперь, когда я об этом думаю, забавным поворотом сюжета / идеей было бы, если бы Ехидна, в целом, форсировала процесс "почкования" созданием искаженных клонов - она мертвый шард, и все сломано.... Мне представляется весьма вероятным, что если бы она успешно сбежала и продолжала хватать паралюдей, она вполне могла бы полностью и дотла изгадить Сына / цель Сына, эффективно испортив / перепочковав слишком много шардов.
+
+Выверт побеждает Апп Барыг с поддержкой Перекидышей\Подполье Цырк убер лит
+набеги на нычки барыг. склады
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 бекенд тейла софи 
-
-Симург
-
-выбить барыг с помощью героев, защитить особняки, набеги на нычки барыг. склады
-
-конференция: сплетница прядь
-
-Выверт побеждает Апп Барыг и Империю с поддержкой Омута Неформалов Цырк убер лит
 
 Тритон Планкин
 первый раз не запомнил трип мутный
 второй раз пустил узор в мозг тонкими нитями
 монитор чтобы выяснить в каких областях мозга больше всего собирается глюкозы.
-
 что это мне даст? Ну, я почувствую себя учённым иследователем приносящим себя в жертву во благо человечества.
-
 
 посвящение в омут
 посвящение в четвёртую ступень твирин степь лес болото пещеры алые зеркальные кристалы
 
 зиз????
-квантовое сознание
-бледный гриб пещера кристалы избавится
 
 перед приходом Зиз. Омут прячется мертвеца оставляют как точку выхода, 
-Прядь Мертвец Полярник у костра
+Мертвец Полярник у костра
 Бледный и гг у холмов в болотах под холмами в пещеры к крассными кристалам сон на болотах смена формы
-держи флакон тритон узор псай исслед в мозг
-
-
-симург в канализационном тонеле встреча с грибником в красном свете ночесветки бег в слезах страх что схватят
-движки
-заминированый ошейник
-дракон выщитывает сколько времени можно находится под влиянием симург
-
+тритон узор псай исслед в мозг
 
 Выверта громят. Томас Кальвер дир СКП на его месте. Спаситель Броктон бей.
 
 измененение предыстории
 <!-- Мак в зиз -->
-не доверие к файлам в инете, опрос дальних радственнико
-надзиратели работают на месте в три смены опрашима двожнов личности масок и гражданские 
 
-сравнение с показаними дальних родственников
-омуту нужна амелия для создания тела для клары если она не согласится планируется применить регенита. клару чтобы помочь с золотым утром.
-опт барыгам и апп
-
-0.7. молд
-
-барыги - доки, империя - центр, подполье\омут\трещина - холмы особняки
-
-мак и клара
-
+для клары если она не согласится планируется применить регенита. клару Мак влюблён. мак и клара
 мак и емми 4 славы
-
 Рыжий и Грибник используют Эмми для создания Клары для Македонского.
-
 Она может создать тело но как создать душу клары? Бледный.
-
 Молд Омут  Сон Холмы Кристалы Сеть через Базилиск
+Клара покидает омут и присоеденяется к Подполью
 
-Клара покидает омут и присоеденяется к Нефомалам
 
-сказки про скаффандр и ИИ
-
-сказка мертвеца про квантовую теорию сознания, мол електро химические еффекты оказывают влияние на квантовую природу пространства и сознание формируется в ефире как побожный еффект електрохимического електромагнитного излучения.
-
-Красная Королева, 
-
-кислота могила шабаш неофиты братская могила убийство своей семьи, туматургия, платье из крови. Рядом все маски секты для более креативных сил.
 
 Лаборатория, захват Здания СКП. зависимость от крови королевы. пьют общюю кровь братанов для контакта любви к друг другу.
 
-красная королева стая собак сознательных
-
-мясо растёт на деревьях деревья из мышц, спорынья, микотоксикозы
-Тайла алек контроль королевы
+красная шапочка 
+стая собак с мозгами людей Бледный частые пересадки 
+брут про стрекотал 
+коммуникация стрекотом
+тонкие прозрачные перепонки расположенные в полукруглых мембранах расположенных вдоль позвоночника, работали по принцыпу сверчков
+кислота могила шабаш неофиты братская могила убийство своей семьи, туматургия, платье из крови. Рядом все маски секты для более креативных сил.
+мясо растёт на деревьях деревья из людей, спорынья, микотоксикозы
+Тайла алек контроль красной шапочки
 купол из плоти чтобы защитить мир от вирусов
 спиральные лесницы
 зараженные сливаются в биомассу
-
 клара епидемия
-
 в городе епидемия
- есть угроза распространения, 
+есть угроза распространения, 
+скармливание трупов
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+Группы внутри N8:
+
+Свидетели Зиона:
+Ночь, Туман, Отала, Виктор, Мрак, Чертёнок, Теневой Сталкер, Толкач и Демон Ли
 
 Кладбище Кораблей, Трамвайное депо, Рынок:
-Культ = Сочник\Цирк, Толкач, Скрип, Прядь, Сплетница, Рыжий, Бледный, Мертвец.
+Культ = Сочник\Цирк, Скрип, Сплетница, Рыжий, Мертвец.
 
 Кладбище, Планкин, Особняки:
-Команда Трещины = Лабиринт + Трещина, Улитка Грегор, Тритон, Саламандра, Клара, Мак.
+Команда Трещины = Лабиринт + Трещина, Улитка Грегор, Тритон, Саламандра
 
-Доки\Центр, Доки\Берег:
-Вакханалия = Регент + Тайла, Мрак, Чертёнок, Кукла, Емми, Сука, Страшила. Три Славы.
+Доки\Центр
+Вакханалия = Регент + Тайла, Красная Шапочка, Бледный, Мак, Сука, Страшила. Три Славы.
 
 Центр:
 Выверт + Дина, Колесничий, Металлолом, Убер, Лит, Грибник.
 
-Деловой Раён Юг:
-Цунами = Слава0, Рыцарь, Барьер, Мегаватт, Брандиш, ЛазерШоу, Леди Фотон, Бризант.
-
 Деловор раён юговосток:
-Империя88 = Кайзер\Чистота,
+Империя88 = Кайзер
 
-Стена\Кордон, Штаб Протектората:
-СКП = Дракон, Оружейник, Мисс Ополчение, Батарея, Штурм, Скорость, Флешета, КидВин, Стояк, Виста, Эгида, Сталевар, Флешета, Триумф, Ласточких хвост.
 
+
+
+
+
+
+
+
+
+
+
+Кукла вербовка в Вакханалию]
+
+
+
+
+
+
+
+
+
+
+Третья Фаза
 
 ____________________________
 Перекидыши = Сочник + Клара, Бледный, Прядь, Мертвец, Базилиск, Мак, Страшила, Рыжий.
 
+вампиры солнечшый свет вызывает галюцинации из-за производимого серотонина
 
-вампиры солнечшый свет вызывает галюцинации изза производимого серотонина
+flesh slam = Красная Шапочка, Мак, Страшила\БроуБит\Highbrow, Эгида, Сочник, Кукла, ТриСлавы, Сука, Клара.
 
-боди хоррор скармливание трупов
-На Старте
+Подполье = Мрак+Сталкер, Чертёнок, Алек+Тайла, Цирк+Сплетница.
 
-Бодихоррор = Красная Шапочка, Мак, Страшила\БроуБит, Эгида, Сочник, Кукла, ТриСлавы, Сука, Клара.
+ПсайХоррор = Тритон, Грибник, Выверт+Дина, Рыжий, Бледный, Мертвец, Лабиринт.
 
-Подполье = Мрак+Сталкер, Чертёнок, Алек+Тайла.
+ТехноХоррор = Скрип, Колесничий, Металолом, Лит, КидВин, 
 
-Измерение = Рыжий, Бледный, Мертвец, Лабиринт.
+Саламандра, 
 
-Псай = Тритон, Грибник.
 
-Выверт+Дина, 
-Цирк+Сплетница, 
 
-Техно = Скрип, Колесничий, Металолом, Лит, КидВин, 
 
-Толкач, Саламандра, 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 0.8.
 23.03.2011 Лун рекрутирует Бакуду 
 15.04.2011 скитальцы
+https://worm.fandom.com/wiki/Barrow
 
 конспирация
 Бойня в ББ
+сплетница кандидат джека
 Джек доза прозрение Тритон
 бойня падёт
 лабиринт мантон
@@ -235,3 +332,5 @@ ____________________________
    Императрица (The Empress) -- с течением времени, растет сила и происходит отключение, в стиле Суки, от социальных умений / понимания. Лица становятся нераспознаваемыми, и простейшие социальные ситуации становятся загадкой. Находясь в одиночестве посреди толпы, индивидуум сходит с ума.
   
    Император (The Emperor) -- сон становится тревожным, затем полностью бесполезным -- вне зависимости от того, какое количество времени вы проводите с головой на подушке, это не приносит отдыха, даже если вы тратите часы, с закрытыми глазами, в сновидениях. Но когда все уже кажется потерянным, и дело доходит практически до галлюцинаций, появляется оказия, и персонаж находит, что насилие обеспечивает отдых и восстановление. Чем более он жесток и груб, тем более освеженным себя чувствует. До тех пор, пока в конце одной из битв, персонаж неожиданно обнаруживает, что очень, очень устал и практически галлюцинирует снова, и человек, которого он искалечил, вовсе не тот, за кого он его принимал.
+
+конференция: сплетница прядь
