--- a/R0_tail/now work/volatile/dirt/scena/0.2.7. поток ритуал дракон форма .md
+++ b/R0_tail/now work/volatile/dirt/scena/0.2.7. поток ритуал дракон форма .md
@@ -1,3 +1,5 @@
+безопассное место выход на панацею
+
 	поток образов чертоги разума
 	timeless theory of sacrifices
 
@@ -7,7 +9,7 @@
 Иди за драконом спускайся в эту комнату, может еще не поздно застать его в колыбельке.
 БЕЗГРАНИЧНАЯ ВЕРА
 На периферии ума то, во что веришь как в истинное, — истинно и становится истинным в определённых пределах, которые нужно выявить опытным путём или с помощью переживания. Спрятанный от своего я, скрытый набор убеждений и верований контролирует твоё мышление, твои действия, твои чувства.
-Скрытая группа спрятанных убеждений является ограничивающей группой убеждений, за которые нужно перейти. 
+Скрытая группа спрятанных убеждений является ограничивающей группой убеждений, за которые нужно перейти.
 
 Процесс передвижения из пространства, где я нахожусь сейчас, которое мы будем называть «пространством номер одни», в новое пространство, «номер два», требует того, чтобы пространство номер два существовало. 
 
