--- a/R0_tail/now work/volatile/dirt/scena/0.2.8. узор корона скаффандр .md
+++ b/R0_tail/now work/volatile/dirt/scena/0.2.8. узор корона скаффандр .md
@@ -13,3 +13,4 @@
 
 безопассное место для експерриментов
 	медуза в скаффандре 	Узор мозг 	вещества 	ятоясё
+	Контакт с куклой предоставление материала 
