--- a/R0_tail/now work/volatile/dirt/scena/newter тритон/0.3. трип тритон.md
+++ b/R0_tail/now work/volatile/dirt/scena/newter тритон/0.3. трип тритон.md
@@ -1,3 +1,74 @@
+0. Выйди из скафандра
+1. Выйди из чертога
+2. Нельзя заражение
+
+ятоясё
+
+добро пожаловать в чертог капитан топ навигатор его
+
+логи есть способ познать большие путь способ постичь воспринимать больше и быстрее посетить места не постижимые из нутри комнаты
+О: не выходи из комнаты
+
+как что это за техника? о чём говорил мне предшественник? что он хочет хотел мне сказать о чём он хотел меня предупредить? 
+О: Все скомпрометированы.
+
+представиьсебя на борту космолёта, ты там так долго что забыл что этот корабль забыл как выйти из него
+
+оператор мне нужно выйти наружу
+как
+
+мне нужно покинуть корабль
+как
+
+выдайте мне скафандр и проведите к выходу
+что такое скафандр, что такое выход
+
+ты забыл что ты существо отдельное от корабля, забыл о существовании своих ног
+
+ты водишь скаффандр умело и аккуратно ты едешь на нем куда пожелаешь ты управляешь фарами, мышцами, дыханием, мыслями, записыеваешь инфу и создаёшь сети ты отличный пилот внешнего нейро скаффандра. 
+
+я был там
+
+голограма оператора мигнула
+
+есть маршруты по которым в скафандре не пройти по котрым тебе не пройти оставаясь в чертоге
+потому что чертог слишком странная структура чтобы протиснутся по тем дорогам.
+
+ты страстно жаждешь пробежаться по лесу, или по плавать в реке или забратся на гору
+
+логи предшествеников говорят что ключь к этим запретным таинствам древнее и опасное умение выйти из машины и ты решаешь изучить это мастерство. ты проводишь диагностику скафандра но не находишь ни кнопки ни функции ни программы под названием выйти из скафандра
+
+ты бороздил множество путей в пространстве но так и не достиг выйти из скафандра
+потому что это не не пункт в пространстве
+
+аналитик говорит что выйти из скафандра это это нечто в корне отличное от всего что ты делал ранее, но для тебя это значит делать еще больше глупостей, ты шаришся по чертогам, навещаещь корень, целителя, агента.
+взаимодействуешь с другими, ездишь задом светишь фарами присвете дня въезжаешь в къюветы но ничто не приводит к разгадке как выйти из машины
+
+
+
+в логах говорится что это просто, это проще всего что ты делал когда либо.
+
+ты проехал оттуда до туда и тама, ты оторвался от преследования и риск и выжил, а выйти из машины это еще проще ничего проще просто представить нельзя, до этого ближе чем рукой подать но ты всё еще не открыл секрета.
+
+вокруг собралось много дичи послушать эти притки [[0.1]]
+
+и наконец ты въезжаешь на вершину высочайшей горы, встречаешь мудреца и спрашиваешь в каком порядке надо нажимать кнопки на приборной доске чтобы выйти из скафандра
+не нужно нажимать кнопки запускать программы включать функции нужно просто выйти из скафандра
+
+может стоит поремонтировать космолёт?
+
+космолёт двигатель фотофильтры тут ни причем просто выйди из скафандра.[[0.1]]
+
+ты называешь его идиотом у уезжаешь
+
+где лаба для изученя этой проблемы?
+
+ты так думаешь только по тому что так написано на лобовом стекле
+ты думаешь что лобовое стекло идентично реальности по этому не можешь выйти из скафандра
+
+
+
+
 
 Трип тритон
 
